--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 <div id="profile">
 <img class="avatar avatar-circle" src="./index_files/avatar_hu3c64bd0f98018e2d901b7c60447ac42e_1387900_150x150_fill_q75_lanczos_center.jpg" alt="Haotian(Tean) Lu">
 <div class="portrait-title">
-<h2>Alice Bighetti (吳恩達)</h2>
-<h3>Professor of Artificial Intelligence</h3>
+<h2>Haotian(Tean) Lu</h2>
+<h3>Master of Science in Business Analytics</h3>
 <h3>
-<span>Stanford University</span>
+<span>University of Rochester</span>
 </h3>
 </div>
 <ul class="network-icon" aria-hidden="true">
@@ -152,8 +152,8 @@ Welcome 👋 We know that first impressions are important, so we’ve populated 
 <div class="article-metadata">
 <div>
 <span>
-Alice Bighetti (吳恩達)</span>, <span>
-吳恩達</span>
+Haotian(Tean) Lu</span>, <span>
+Tean</span>
 </div>
 <span class="article-date">
 Last updated on
@@ -219,7 +219,7 @@ Learn how to blog in Academic using Jupyter notebooks
 <div class="article-metadata">
 <div>
 <span>
-Alice Bighetti (吳恩達)</span>
+Haotian(Tean) Lu</span>
 </div>
 <span class="article-date">
 Last updated on
