--- a/index.html
+++ b/index.html
@@ -123,121 +123,12 @@
 <h1 class="mb-0">Welcome 👋</h1>
 </div>
 <div class="col-12">
-<p>Use this area to speak to your mission. I’m a research scientist in the Moonshot team at DeepMind. I blog about machine learning, deep learning, and moonshots.</p>
-<p><strong>Specialties:</strong> Analytics &amp; Data, Leadership, Programming, Strategic Planning, Writing &amp; Editing</p>
-</div>
-</div>
-</div>
-</section>
-<section id="posts" class="home-section wg-pages">
-<div class="home-section-bg">
-</div>
-<div class="container">
-<div class="row justify-content-center">
-<div class="section-heading col-12 mb-3 text-center">
-<h1 class="mb-0">Recent News</h1>
-</div>
-<div class="col-12">
-<div class="media stream-item">
-<div class="media-body">
-<div class="section-subheading article-title mb-0 mt-0">
-<a href="https://hugo-academic-pages.netlify.app/post/getting-started/">Welcome to Wowchemy, the website builder for Hugo</a>
-</div>
-<a href="https://hugo-academic-pages.netlify.app/post/getting-started/" class="summary-link">
-<div class="article-style">
-Welcome 👋 We know that first impressions are important, so we’ve populated your new site with some initial content to help you get familiar with everything in no time.
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div class="article-metadata">
-<div>
-<span>
-Haotian(Tean) Lu</span>, <span>
-Tean</span>
-</div>
-<span class="article-date">
-Last updated on
-Sep 21, 2021
-</span>
-<span class="middot-divider"></span>
-<span class="article-reading-time">
-3 min read
-</span>
-<span class="middot-divider"></span>
-<span class="article-categories">
-<i class="fas fa-folder mr-1"></i><a href="https://hugo-academic-pages.netlify.app/category/demo/">Demo</a>, <a href="https://hugo-academic-pages.netlify.app/category/%E6%95%99%E7%A8%8B/">教程</a></span>
-</div>
-</div>
-</div>
-<div class="ml-3">
-<a href="https://hugo-academic-pages.netlify.app/post/getting-started/">
-<img src="./index_files/featured_hub9ee31969f44a6711206a2baf9f065b4_241861_150x0_resize_q75_lanczos.jpg" alt="Welcome to Wowchemy, the website builder for Hugo" loading="lazy">
-</a>
-</div>
-</div>
-<div class="media stream-item">
-<div class="media-body">
-<div class="section-subheading article-title mb-0 mt-0">
-<a href="https://hugo-academic-pages.netlify.app/post/writing-technical-content/">Writing technical content in Academic</a>
-</div>
-<a href="https://hugo-academic-pages.netlify.app/post/writing-technical-content/" class="summary-link">
-<div class="article-style">
-Academic is designed to give technical content creators a seamless experience. You can focus on the content and Academic handles the rest.
-Highlight your code snippets, take notes on math classes, and draw diagrams from textual representation.
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div class="article-metadata">
-<span class="article-date">
-Last updated on
-Sep 21, 2021
-</span>
-<span class="middot-divider"></span>
-<span class="article-reading-time">
-5 min read
-</span>
-</div>
-</div>
-</div>
-<div class="ml-3">
-<a href="https://hugo-academic-pages.netlify.app/post/writing-technical-content/">
-<img src="./index_files/featured_huc72159e0fc0d14b85f60d34436a630f0_266353_150x0_resize_q75_lanczos.jpg" alt="Writing technical content in Academic" loading="lazy">
-</a>
-</div>
-</div>
-<div class="media stream-item">
-<div class="media-body">
-<div class="section-subheading article-title mb-0 mt-0">
-<a href="https://hugo-academic-pages.netlify.app/post/jupyter/">Display Jupyter Notebooks with Academic</a>
-</div>
-<a href="https://hugo-academic-pages.netlify.app/post/jupyter/" class="summary-link">
-<div class="article-style">
-Learn how to blog in Academic using Jupyter notebooks
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div class="article-metadata">
-<div>
-<span>
-Haotian(Tean) Lu</span>
-</div>
-<span class="article-date">
-Last updated on
-Sep 21, 2021
-</span>
-<span class="middot-divider"></span>
-<span class="article-reading-time">
-2 min read
-</span>
-</div>
-</div>
-</div>
-<div class="ml-3">
-<a href="https://hugo-academic-pages.netlify.app/post/jupyter/">
-<img src="./index_files/featured_hub1daa031c2af6888ff37bd93eb033a1a_71549_150x0_resize_lanczos_3.png" alt="Display Jupyter Notebooks with Academic" loading="lazy">
-</a>
-</div>
-</div>
+<p>I am passionate and well-trained in data science. As a current Master of Science in Business Analytics student in University of Rochester with hands-on market research experience, and advanced analytical skills, I believe my skills and experiences make me a qualified candidate for the position. I offer the following skills and experiences that will allow me to succeed in this role:</p>
+<p><strong>•	Analytical:</strong> Through the rigorous STEM certified curriculum, I have firm knowledge on statistics, and coding on R/Python to achieve both qualitative and quantitative analysis, such as A/B Testing, clustering, regression, and machine learning tools (e.g., MARS, random forest, PCA), descriptive/predictive/casual analysis, web-scratching as well as geolocational analysis. In one of my school projects, I was asked to predict whether a new customer should be approved for a credit card based on previous dataset. I used K-Fold to train my data to get the best predictive model, and I got a full grade (top 10%) in my class. I am skilled at advanced Excel(VBA, vlookup, private table, data analysis tools) and data management with SQL too. Once I was required to establish a data warehouse and a series of queries to provide valuable information, I used aggregation in queries to return information like who's expense is higher than average expense per day and I got a full grade.</p>
+<p><strong>•	Data Visualization:</strong> I am skilled in data visualization with Excel, Tableau and Power BI, and I am good at using Photoshop and AI to edit, beautify and typeset graphs to deliver clear messages. When I was asked to visualize important information in daily transaction data in my school project, I made bar chart, pie chart, map, line chart in Tableau to show various information like profit trends by time, customers distribution and sales proportion by categories, then typeset them in dashboard. With filters, we can know a holistic perspective of our business as well as details in specific locations, categories, or departments.</p>
+<p><strong>•	Problem Solving:</strong> My abundant work/study experiences honed my problem-solving skills. Equipped with hard skills such as knowledge of economics, accounting and marketing, as well as soft skills in teamwork like leadership, communication and ability to handle stress, I always keep a clear mind in solving problems. In a project that needed our group to decide whether should we launch a product in new market, I leaded group to set our analysis procedure: calculate profit in short-term and long-term, compare with opportunity cost and give suggestions. In analyzing profit, we should consider 3C(company, customers and competitors) and 4P(product, place, price and promotion) to decide our tactic and predict profit. In this way, we obtained data like due diligence, industry financial report and customer research report from market research company. Finally we offered a holistic insight to our client. With training and practicing, I am already familiar with advertising effect, price optimizing, market entry problems analysis based on specific dataset and methodology.</p>
+
+<p><strong>Specialties:</strong> Analytics &amp; Data, Leadership, Programming, Strategic Planning, Geospatial Analysis, Picture Editing</p>
 </div>
 </div>
 </div>
@@ -247,7 +138,7 @@ Sep 21, 2021
 <div class="container">
 <footer class="site-footer">
 <p class="powered-by">
-Published with <a href="https://wowchemy.com/?utm_campaign=poweredby" target="_blank" rel="noopener">Wowchemy</a> — the free, <a href="https://github.com/wowchemy/wowchemy-hugo-modules" target="_blank" rel="noopener">open source</a> website builder that empowers creators.
+Published by Tean Lu
 </p>
 </footer>
 </div>
