Update Research to Portfolios

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <a class="nav-link active" href="https://htean.github.io/"><span>Home</span></a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about:blank"><span>Research</span></a>
+<a class="nav-link" href="about:blank"><span>Portfolios</span></a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="about:blank"><span>Events</span></a>
