--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 <a class="nav-link" href="portfolio.html"><span>Portfolios</span></a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about:blank"><span>Events</span></a>
+<a class="nav-link" href="about:blank"><span>Experiences</span></a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about:blank"><span>Publications</span></a>
+<a class="nav-link" href="about:blank"><span>Projects</span></a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="about:blank"><span>Contact</span></a>
+<a class="nav-link" href="Contact.html"><span>Contact</span></a>
 </li>
 </ul>
 </div>
